--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 # Created by .ignore support plugin (hsz.mobi)
-__pycache__/test_with_logging.cpython-39-pytest-6.1.2.pyc
+__pycache__/test_2.cpython-39-pytest-6.1.2.pyc
